--- a/src/index.css
+++ b/src/index.css
@@ -1,61 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-* {
-  margin: 0;
-  padding: 0;
-  font: inherit;
-}
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-input,
-button,
-textarea,
-select {
-  outline: none;
-}
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-body {
-  font-family: "Epilogue", sans-serif;
-  font-weight: 400;
-  padding: 20px;
-  line-height: 1.5;
-  background-color: #191e23;
-}
-.review {
-  width: 300px;
-  padding: 10px;
-  background-color: white;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border-radius: 12px;
-}
-.review-image {
-  height: 200px;
-}
-.review-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 8px;
-}
-.review-info {
-  padding: 20px 0;
-  font-size: 14px;
-  color: #999;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
